<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MatchApp</string>
    <string name="ScanCaptureActivity">ScanCaptureActivity</string>
	<string name="ScanResultActivity">ScanResultActivity</string>
	<string name="NfcActivity">NfcActivity</string>
	<string name="MoreActivity">MoreActivity</string>
	<string name="MoreAboutActivity">MoreAboutActivity</string>
	
    <string name="action_settings">Settings</string>	
	<string name="scan_text">将二维码/条形码放入框内, 即可自动扫描</string>
	
    <string name="wifiTextTitle">nfc4Wifi标签读写工具</string>
    <string name="WIFITextName">wifi名称:</string>
    <string name="WIFITextPwd">wifi密码:</string>
    <string name="BottenConnect">连接wifi</string>
    <string name="BottenWrite">写入</string>
    <string name="BottenRead">读取</string>
    <string name="WIFIResult">操作结果:</string>
    <string name="info">info</string>
    <string name="nfcInfo">nfc数据</string>
	
	<string name="about_bottom_text">©2013 迈驰科技</string>
	
	<string name="nfc_start_text_describe">请将您的手机靠近商品包装防伪感应区，读取标签信息</string>

</resources>
